--- a/src/teaeli/BlendDetails.form
+++ b/src/teaeli/BlendDetails.form
@@ -178,9 +178,9 @@
                       <Component id="jScrollPane4" alignment="0" min="-2" pref="229" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnDeleteFlv" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnDeleteIng" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnDeleteIng" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -471,8 +471,8 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="9">
-                <StringItem index="0" value="Artisian Special V2"/>
-                <StringItem index="1" value="Artisian Special V26"/>
+                <StringItem index="0" value="Artisian Special V1"/>
+                <StringItem index="1" value="Artisian Special V2"/>
                 <StringItem index="2" value="Black"/>
                 <StringItem index="3" value="Green Tea"/>
                 <StringItem index="4" value="Organic Black"/>
