--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -669,8 +669,8 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                      <JTabbedPaneConstraints tabName="    Ingredients    ">
-                        <Property name="tabTitle" type="java.lang.String" value="    Ingredients    "/>
+                      <JTabbedPaneConstraints tabName="    Ingredients Edit    ">
+                        <Property name="tabTitle" type="java.lang.String" value="    Ingredients Edit    "/>
                       </JTabbedPaneConstraints>
                     </Constraint>
                   </Constraints>
@@ -690,9 +690,9 @@
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="searchIngredientComboBox" min="-2" pref="300" max="-2" attributes="0"/>
-                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
                                               <Component id="searchIngredientBtn" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace pref="711" max="32767" attributes="0"/>
+                                              <EmptySpace pref="723" max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Component id="addItemBtn" min="-2" max="-2" attributes="0"/>
@@ -733,7 +733,7 @@
                     </Component>
                     <Component class="javax.swing.JButton" name="searchIngredientBtn">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Go"/>
+                        <Property name="text" type="java.lang.String" value="Edit"/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchIngredientBtnActionPerformed"/>
@@ -820,8 +820,8 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                      <JTabbedPaneConstraints tabName="    Blends    ">
-                        <Property name="tabTitle" type="java.lang.String" value="    Blends    "/>
+                      <JTabbedPaneConstraints tabName="    Blends Edit    ">
+                        <Property name="tabTitle" type="java.lang.String" value="    Blends Edit    "/>
                       </JTabbedPaneConstraints>
                     </Constraint>
                   </Constraints>
@@ -962,7 +962,7 @@
                     </Container>
                     <Component class="javax.swing.JButton" name="searchProductBtn">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Go"/>
+                        <Property name="text" type="java.lang.String" value="Edit"/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchProductBtnActionPerformed"/>
