--- a/src/teaeli/DeliverBlend.form
+++ b/src/teaeli/DeliverBlend.form
@@ -90,7 +90,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="deliverReason" min="-2" max="-2" attributes="0"/>
                       <Component id="blendCatg" min="-2" max="-2" attributes="0"/>
@@ -272,7 +272,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Free Qty In Stock"/>
+            <Property name="text" type="java.lang.String" value="Buffer Qty In Stock"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="allocatedQty">
@@ -342,7 +342,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Allocate left to free stock ?"/>
+            <Property name="text" type="java.lang.String" value="Allocate buffer to free stock ?"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="unallocateQtyTxt">
