--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -548,7 +548,7 @@
                               <Table columnCount="4" rowCount="0">
                                 <Column editable="false" title="Blend Category" type="java.lang.Object"/>
                                 <Column editable="false" title="Blend Name" type="java.lang.Object"/>
-                                <Column editable="false" title="Visible Stock (g)" type="java.lang.Object"/>
+                                <Column editable="false" title="Buffer Stock (g)" type="java.lang.Object"/>
                                 <Column editable="false" title="Invisible Stock (g)" type="java.lang.Object"/>
                               </Table>
                             </Property>
@@ -669,8 +669,8 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                      <JTabbedPaneConstraints tabName="    Ingredients    ">
-                        <Property name="tabTitle" type="java.lang.String" value="    Ingredients    "/>
+                      <JTabbedPaneConstraints tabName="    Ingredient Edit    ">
+                        <Property name="tabTitle" type="java.lang.String" value="    Ingredient Edit    "/>
                       </JTabbedPaneConstraints>
                     </Constraint>
                   </Constraints>
@@ -733,7 +733,7 @@
                     </Component>
                     <Component class="javax.swing.JButton" name="searchIngredientBtn">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Go"/>
+                        <Property name="text" type="java.lang.String" value="Edit"/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchIngredientBtnActionPerformed"/>
@@ -820,8 +820,8 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                      <JTabbedPaneConstraints tabName="    Blends    ">
-                        <Property name="tabTitle" type="java.lang.String" value="    Blends    "/>
+                      <JTabbedPaneConstraints tabName="    Blend Edit    ">
+                        <Property name="tabTitle" type="java.lang.String" value="    Blend Edit    "/>
                       </JTabbedPaneConstraints>
                     </Constraint>
                   </Constraints>
@@ -962,7 +962,8 @@
                     </Container>
                     <Component class="javax.swing.JButton" name="searchProductBtn">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Go"/>
+                        <Property name="text" type="java.lang.String" value="Edit"/>
+                        <Property name="toolTipText" type="java.lang.String" value=""/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchProductBtnActionPerformed"/>
