--- a/src/teaeli/IngredientDetails.form
+++ b/src/teaeli/IngredientDetails.form
@@ -210,8 +210,17 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="itemTypeCombo">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.DefaultComboBoxModel(new String[] {&quot;Tea&quot;, &quot;Flavour&quot; , &quot;Herbs&quot;, &quot;Flowers&quot;, &quot;Fruits&quot;, &quot;Leaves&quot;, &quot;Other&quot;})" type="code"/>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="8">
+                <StringItem index="0" value="Tea"/>
+                <StringItem index="1" value="Flavour"/>
+                <StringItem index="2" value="Herbs"/>
+                <StringItem index="3" value="Flowers"/>
+                <StringItem index="4" value="Fruits"/>
+                <StringItem index="5" value="Leaves"/>
+                <StringItem index="6" value="Granule Flavour"/>
+                <StringItem index="7" value="Other"/>
+              </StringArray>
             </Property>
           </Properties>
           <Events>
